# UniV

./: .gitignore  README.md  __init__.py  blender_manifest.toml  keymaps.py  preferences.py  reload.py  ui.py
core/: __init__.py
draw/: __init__.py  lines.py  shaders.py  text.py
draw/mesh_extract/: __init__.py
fastapi/: __init__.py  clib.py
fastapi/fastapi_build/: CMakeLists.txt  README.md  blender_config_override.cmake  build_blender.bat  build_blender.sh  make.bat  make.sh  univ_fastapi.cpp
fastapi/fastapi_build/override/: BKE_attribute.h  BKE_customdata.hh  attribute.cc  bmesh_construct.cc  bmesh_construct.hh  bmesh_interp.cc  bmesh_interp.hh  bmesh_mesh.cc  bmesh_mesh.hh  bmesh_mods.cc  bmesh_mods.hh  bmesh_operators.cc  bmesh_operators.hh  customdata.cc  mesh_evaluate.cc
icons/: __init__.py
info/: __init__.py  operator.py
operators/: __init__.py  checker.py  inspect.py  mark.py  misc.py  other.py  project.py  quadrify.py  quick_snap.py  relax.py  seam.py  select.py  stack.py  stitch_and_weld.py  straight.py  symmetrize.py  texel.py  toggle.py  transform.py  unwrap.py
textures/: __init__.py
types/: __init__.py  bbox.py  btypes.py  island.py  llvm.py  loop_group.py  mesh_island.py  ray.py  umesh.py
ui/: __init__.py
utils/: __init__.py  bench.py  bm_iterable.py  bm_select.py  bm_tag.py  bm_walk.py  draw.py  gn.py  other.py  shapes.py  solver.py  ubm.py  umath.py  uv_parametrizer.py
utypes/: __init__.py  bbox.py  btypes.py  island.py  llvm.py  loop_group.py  mesh_island.py  ray.py  umesh.py  utexture.py
